fix: change the width of the container when scrollbar occurs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html {
+  scrollbar-gutter: stable;
 }
 
 @layer base {
@@ -41,6 +42,7 @@ body {
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
@@ -81,6 +83,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
